syntax = "proto3";

package com.ilidan.grpc;

option java_package = "com.ilidan.grpc";
option java_outer_classname = "People";
option java_multiple_files = true;

service PeopleService{
    rpc getRealNameByUsername(PeopleRequest) returns (PeopleResponse){

    }
}

message PeopleRequest{
    string username = 1;
}

message PeopleResponse{
    string realName = 1;
}